--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,7 +8,7 @@ sonar.projectVersion=1.0
 sonar.sources=src/main,src/resources
 
 # Path to test source directories
-sonar.tests=src/test
+sonar.tests=.
 
 # Language of the source code
 sonar.language=java
